Fixed Height Fiasco On mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,9 @@
 }
 
 @media screen and (max-width: 700px) {
+  .mainContainer{
+    height: 90vh;
+  }
   .nav{
     padding: 1.1rem 0;
   }
